readability and style fixes

--- a/styles.css
+++ b/styles.css
@@ -23,35 +23,27 @@ section {
     margin: 50px;
 }
 
-header {
-    /* background-color: rgb(220, 184, 184); */
-}
 
 .intro {
-    /*
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    justify-items: start;
-    padding: 10px;
-    text-align: center;
-    column-gap: 50px;
-}*/
-
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 50px;
+    padding: 10px;
 }
 
 .headshot img {
     width: 10rem;
     border-radius: 50%;
+    border-color: rgb(79, 35, 35);
+    border-width: 2px;
+    border-style: solid;
+
 
 }
 
 .heroimage {
     background-position: center;
-    background-image: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .2)), url("heroimage.jpg");
+    background-image: linear-gradient(rgba(220, 184, 184, 0.9), rgba(220, 184, 184, .4)), url("heroimage.jpg");
     background-repeat: no-repeat;
     position: relative;
     width: 100%;
@@ -59,13 +51,18 @@ header {
     margin: auto;
 }
 
-
-
 h2 {
     text-decoration: underline;
-    text-decoration-thickness: 1px;
-
+    text-decoration-thickness: 2px;
 }
+
+.hero-content {
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, .7);
+    padding: 5px 20px;
+    border-radius: 10px;
+}
+
 
 .navbar {
     background-color: rgba(220, 184, 184, 0);
@@ -84,13 +81,12 @@ h2 {
     text-align: center;
     text-decoration: none;
     font-size: 20px;
-    /* width: 100px */
-    /* padding: 5px 20px; */
-    /* margin: 5px; */
+    border-radius: 10px;
+    padding: 5px 15px;
 }
 
 .navbar a:hover {
-    background-color: rgba(255, 255, 255, 0.668);
+    background-color: rgba(220, 184, 184, 0.5);
     color: rgb(54, 19, 19);
     font-style: italic;
 }
@@ -116,6 +112,7 @@ ul.skills-list {
 }
 
 li {
+    font-family: garamond, serif;
     padding: 10px;
     line-height: 1.5;
 }
@@ -142,26 +139,28 @@ li {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: rgb(255, 255, 255);
-    /* Example text color */
+    color: rgb(54, 19, 19);
     text-align: center;
 }
 
 .hero-slide.active {
-    opacity: .8;
+    opacity: 1;
 }
 
-/*a:link {
+
+a:link {
     color: rgb(54, 19, 19);
 }
 
 a:visited {
     color: rgb(54, 19, 19);
 }
-*/
+
 a:hover {
-    filter: brightness(0.8);
+    /* filter: brightness(0.2); */
+    color: rgb(50, 100, 50);
 }
+
 
 
 footer {
